# Trade-Finance-Query-Resolver

./: .env.example  .gitignore  README.md  pyproject.toml
app/: agent.py  data.py  main.py  schemas.py  tools.py
data/: Bluno_TradeFinanceAgent_Dataset_v1.xlsx
tests/: test_agent.py  test_api.py  test_data.py  test_schemas.py  test_smoke.py  test_tools.py
