[project]
name = "trade-finance-agent"
version = "0.1.0"
description = "Bluno Trade Finance Query Resolver — ReAct agent over trade-finance data"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3",
    "langchain-core>=0.3",
    "openpyxl>=3.1",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore:Using.*httpx.*deprecated",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
